--- a/src/main/web/index.html
+++ b/src/main/web/index.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 ko111111111
-<form>
-
+<form action="login">
+<input type="text" value="mwb" name="name">
+<input type="text" value="1234" name="password">
+<input type="submit" value="tijiao">
 
 </form>
 </body>
