前台功能展示

--- a/src/main/webapp/static/category.html
+++ b/src/main/webapp/static/category.html
@@ -10,10 +10,10 @@
 <div id="wrap">
 
        <div class="header">
-       		<div class="logo"><a href="index.html"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>            
+       		<div class="logo"><a href="index.jsp"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>
         <div id="menu">
             <ul>                                                                       
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.jsp">home</a></li>
             <li><a href="about.html">about us</a></li>
             <li class="selected"><a href="category.html">books</a></li>
             <li><a href="specials.html">specials books</a></li>
@@ -31,7 +31,7 @@
        <div class="center_content">
        	<div class="left_content">
         	<div class="crumb_nav">
-            <a href="index.html">home</a> &gt;&gt; category name
+            <a href="index.jsp">home</a> &gt;&gt; category name
             </div>
             <div class="title"><span class="title_icon"><img src="images/bullet1.gif" alt="" title="" /></span>Category books</div>
            
