--- a/src/main/webapp/static/demo.html
+++ b/src/main/webapp/static/demo.html
@@ -69,7 +69,7 @@
 
         <div class="container-fluid">
             <!-- BEGIN LOGO -->
-            <a class="brand" href="index.html">
+            <a class="brand" href="index.jsp">
                 <img src="media/image/logo.png" alt="logo"/>
             </a>
 
@@ -135,7 +135,7 @@
 
             <li class="start ">
 
-                <a href="index.html">
+                <a href="index.jsp">
 
                     <i class="icon-home"></i>
 
@@ -331,7 +331,7 @@
 
                             <i class="icon-home"></i>
 
-                            <a href="index.html">Home</a>
+                            <a href="index.jsp">Home</a>
 
                             <span class="icon-angle-right"></span>
 
