--- a/src/main/webapp/static/cart.html
+++ b/src/main/webapp/static/cart.html
@@ -9,10 +9,10 @@
 <div id="wrap">
 
        <div class="header">
-       		<div class="logo"><a href="index.html"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>            
+       		<div class="logo"><a href="index.jsp"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>
         <div id="menu">
             <ul>                                                                       
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.jsp">home</a></li>
             <li><a href="about.html">about us</a></li>
             <li><a href="category.html">books</a></li>
             <li><a href="specials.html">specials books</a></li>
@@ -112,8 +112,7 @@
                   <div class="home_cart_content">
                   3 x items | <span class="red">TOTAL: 100$</span>
                   </div>
-                  <a href="cart.html" class="view_cart">view cart</a>
-              
+
               </div>
         
              <div class="title"><span class="title_icon"><img src="images/bullet3.gif" alt="" title="" /></span>About Our Store</div> 
