--- a/src/main/webapp/static/specials.html
+++ b/src/main/webapp/static/specials.html
@@ -10,10 +10,10 @@
 <div id="wrap">
 
        <div class="header">
-       		<div class="logo"><a href="index.html"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>            
+       		<div class="logo"><a href="index.jsp"><img src="images/logo.gif" alt="" title="" border="0" /></a></div>
         <div id="menu">
             <ul>                                                                       
-            <li><a href="index.html">home</a></li>
+            <li><a href="index.jsp">home</a></li>
             <li><a href="about.html">about us</a></li>
             <li><a href="category.html">books</a></li>
             <li class="selected"><a href="specials.html">specials books</a></li>
