前台分页 数据展示 基本功能

--- a/src/main/webapp/static/cart.html
+++ b/src/main/webapp/static/cart.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252" />
 <title>Book Store</title>
-<link rel="stylesheet" type="text/css" href="style.css" />
+<link rel="stylesheet" type="text/css" href="js/style.css" />
 </head>
 <body>
 <div id="wrap">
@@ -19,7 +19,7 @@
             <li><a href="myaccount.html">my accout</a></li>
             <li><a href="register.html">register</a></li>
             <li><a href="details.html">prices</a></li>
-            <li><a href="contact.html">contact</a></li>
+            <li><a href="contact.jsp">contact</a></li>
             </ul>
         </div>     
             
