--- a/src/main/webapp/static/details.html
+++ b/src/main/webapp/static/details.html
@@ -6,28 +6,27 @@ pageEncoding="UTF-8" %>
 <head>
     <meta charset="utf-8"/>
     <title>Book Store</title>
-    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <link rel="stylesheet" type="text/css" href="js/style.css"/>
 
 </head>
 <body>
 <div>
-    <% String path = request.getContextPath();%>
     <!--Top展示-->
     <div class=" center header">
         <div class="logo"><a href="index.html"><img src="images/logo.gif" alt="" title="" border="0"/></a></div>
         <div id="menu">
             <ul>
-                <li ><a href="index">Home</a></li>
-                <c:forEach items="${booktype}" var="BookType">
-                    <li><a href="getTypeBooks?id=${BookType.id}">${BookType.name}</a></li>
-                </c:forEach>
+                <li ><a href="index.jsp">Home</a></li>
+                <div id="booktypeshow">
+
+                </div>
 
                 <!--判断用户是否登录-->
                 <c:if test="${empty sessionScope.user}">
-                    <li><a class="selected" href="login.jsp">登录</a></li>
+                    <li class="selected"><a class="selected" href="login.jsp">登录</a></li>
                     <li><a href="register.jsp">注册</a></li>
                 </c:if>
-                <li><a href="contact.html">联系我们</a></li>
+                <li><a href="contact.jsp">联系我们</a></li>
 
             </ul>
         </div>
@@ -38,7 +37,7 @@ pageEncoding="UTF-8" %>
     <div class="center center_content">
         <!--左侧展示-->
         <div class="left_content">
-            <div class="title"><span class="title_icon"><img src="images/bullet1.gif" alt="" title="" /></span>Register</div>
+            <div class="title"><span class="title_icon"><img src="images/bullet1.gif" alt="" title="" /></span>Contact Us</div>
 
             <div class="feat_prod_box_details">
                 <p class="details">
@@ -46,51 +45,37 @@ pageEncoding="UTF-8" %>
                 </p>
 
                 <div class="contact_form">
-                    <div class="form_subtitle">create new account</div>
-                    <form name="register" action="#">
-                        <div class="form_row">
-                            <label class="contact"><strong>Username:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
+                    <div class="form_subtitle">all fields are requierd</div>
+                    <div class="form_row">
+                        <label class="contact"><strong>Name:</strong></label>
+                        <input type="text" class="contact_input" />
+                    </div>
+
+                    <div class="form_row">
+                        <label class="contact"><strong>Email:</strong></label>
+                        <input type="text" class="contact_input" />
+                    </div>
 
 
-                        <div class="form_row">
-                            <label class="contact"><strong>Password:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
+                    <div class="form_row">
+                        <label class="contact"><strong>Phone:</strong></label>
+                        <input type="text" class="contact_input" />
+                    </div>
 
-                        <div class="form_row">
-                            <label class="contact"><strong>Email:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
-
-
-                        <div class="form_row">
-                            <label class="contact"><strong>Phone:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
-
-                        <div class="form_row">
-                            <label class="contact"><strong>Company:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
-
-                        <div class="form_row">
-                            <label class="contact"><strong>Adrres:</strong></label>
-                            <input type="text" class="contact_input" />
-                        </div>
-
-                        <div class="form_row">
-                            <div class="terms">
-                                <input type="checkbox" name="terms" />
-                                I agree to the <a href="#">terms &amp; conditions</a>                        </div>
-                        </div>
+                    <div class="form_row">
+                        <label class="contact"><strong>Company:</strong></label>
+                        <input type="text" class="contact_input" />
+                    </div>
 
 
-                        <div class="form_row">
-                            <input type="submit" class="register" value="register" />
-                        </div>
-                    </form>
+                    <div class="form_row">
+                        <label class="contact"><strong>Message:</strong></label>
+                        <textarea class="contact_textarea" ></textarea>
+                    </div>
+
+
+                    <div class="form_row">
+                        <a href="#" class="contact">send</a>                    </div>
                 </div>
 
             </div>
@@ -148,19 +133,8 @@ pageEncoding="UTF-8" %>
 
                 <div class="title"><span class="title_icon"><img src="images/bullet4.gif" alt="" title=""/></span>热销书籍
                 </div>
+                <div id="bookhotshow"></div>
 
-                <c:forEach items="${hotbook}" var="Book">
-
-                    <div class="new_prod_box">
-                        <a href="getBookDetails?id=${Book.id}">${Book.name}</a>
-
-                        <div class="new_prod_bg">
-                            <span class="new_icon"><img src="images/promo_icon.gif" alt="" title=""/></span>
-                            <a href="getBookDetails?id=${Book.id}"><img src="<%=path%>${Book.img}" class="image thumb"
-                                                                        border="0"/></a>
-                        </div>
-                    </div>
-                </c:forEach>
             </div>
 
             <!--右侧新书-->
@@ -168,21 +142,10 @@ pageEncoding="UTF-8" %>
 
                 <div class="title"><span class="title_icon"><img src="images/bullet4.gif" alt="" title=""/></span>新书排行
                 </div>
-                <c:forEach items="${newbooks}" var="Book">
 
-                    <div class="new_prod_box">
-                        <a href="getBookDetails?id=${Book.id}">${Book.name}</a>
-
-                        <div class="new_prod_bg">
-                            <span class="new_icon"><img src="images/new_icon.gif" alt="" title=""/></span>
-                            <a href="getBookDetails?id=${Book.id}"><img src="<%=path%>${Book.img}" class="image thumb"
-                                                                        border="0"/></a>
-                        </div>
-                    </div>
-                </c:forEach>
+                <div id="booktnewshow"></div>
 
             </div>
-
         </div>
         <!--end of right content-->
 
@@ -206,6 +169,8 @@ pageEncoding="UTF-8" %>
 
 
 </div>
+<script type="application/javascript" src="js/jquery-1.10.1.min.js"></script>
+<script type="application/javascript" src="js/getshow.js"></script>
 </body>
 
 </html>
